# gargoyle-email-notifier

./: Cargo.toml  README.md
src/: lib.rs
