[package]
name = "gargoyle-email-notifier"
version = "0.1.0"
edition = "2021"
authors = ["Mason Soroka-Gill <Mordinel@pm.me>"]
repository = "https://github.com/Mordinel/gargoyle-email-notifier"
description = "Email notifier for https://github.com/Mordinel/gargoyle"
readme = "README.md"
license = "Apache-2.0"

[profile.release]
opt-level = 3
strip = true
lto = "fat"

[dependencies]
gargoyle = "0.1.5"
lettre = "0.11.7"
log = "0.4.21"
